--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.3",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   }
