--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "collaborative-filter": "^1.0.0-beta.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
