--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.12.0",
