--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,10 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "slick-carousel": "^1.8.1",
+    "tailwind-datepicker-react": "^1.4.3",
+    "tailwind-merge": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
