--- a/backend/scrapper/package.json
+++ b/backend/scrapper/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "cheerio": "^1.0.0-rc.12",
     "node-fetch": "^3.3.2"
   }
